--- a/src/app/home/home-template/home-template.component.html
+++ b/src/app/home/home-template/home-template.component.html
@@ -7,7 +7,7 @@
     <div class="header__menu">
       <ul class="d-flex align-items-center">
         <li class="nav-item d-block " [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
-          <a [routerLink]="['/home']">Bán hàng</a>
+          <a [routerLink]="['/home']">Xuất hàng</a>
         </li>
 <!--        <li class="nav-item d-block " [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">-->
 <!--          <a [routerLink]="['/home/sample-prescription']">Đơn mẫu</a>-->
