--- a/src/app/login/login-template/login-template.component.html
+++ b/src/app/login/login-template/login-template.component.html
@@ -13,7 +13,7 @@
                 <p class="small">Nhập tên người dùng và mật khẩu của bạn để đăng nhập</p>
             </div>
             <div class="form-group">
-                <h6 for="">Tài khoản</h6>
+                <label for="">Tài khoản</label>
                 <input type="text" class="form-control" placeholder="" [(ngModel)]="username">
                 <div *ngIf="check == false">
                     <div *ngIf="username == ''">
