--- a/src/app/home/input/input-template/input-template.component.html
+++ b/src/app/home/input/input-template/input-template.component.html
@@ -3,7 +3,7 @@
 <!--    <div class="col-9">-->
 <!--      <div class="p-3" id="product__in__bill">-->
 <!--        <div class="example-input">-->
-<!--          <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Tìm kiếm thuốc" style="width: 100%;" nzSize="large"-->
+<!--          <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Tìm kiếm sản phẩm" style="width: 100%;" nzSize="large"-->
 <!--                     [(ngModel)]="inputValue" (nzOnSearch)="onInput($event)" (ngModelChange)="onSelect($event)">-->
 <!--            <nz-option *ngFor="let option of options let i = index" [nzValue]="option"-->
 <!--                       [nzLabel]="option.name + ' - ' + option.id">-->
@@ -31,22 +31,22 @@
   <div class="row mt-5">
     <div class="p-3" id="product__in__bill">
       <nz-steps [nzCurrent]="current" style="width: 500px; margin: auto">
-        <nz-step nzTitle="Thông tin thuốc"></nz-step>
+        <nz-step nzTitle="Thông tin sản phẩm"></nz-step>
         <nz-step nzTitle="Thông tin nhà cung cấp"></nz-step>
       </nz-steps>
       <!--<nz-divider></nz-divider>-->
       <div class="steps-content" *ngIf="current == 0">
-        <p style="color: red; margin: 20px 0 0 15px;">* Tìm kiếm, chọn thuốc và chọn lô để nhập hàng</p>
+        <p style="color: red; margin: 20px 0 0 15px;">* Tìm kiếm, chọn sản phẩm và chọn lô để nhập hàng</p>
         <div class="example-input d-flex justify-content-around">
-          <nz-select nzShowSearch nzPlaceHolder="Tìm kiếm thuốc" style="width: 100%;" nzSize="large"
+          <nz-select nzShowSearch nzPlaceHolder="Tìm kiếm sản phẩm" style="width: 100%;" nzSize="large"
             [(ngModel)]="inputValue" (nzOnSearch)="onInput($event)" (ngModelChange)="onSelect($event)">
             <nz-option *ngFor="let option of options let i = index" [nzValue]="option"
-              [nzLabel]="option.name + ' - ' + option.id" nzCustomContent>
+              [nzLabel]="option.name " nzCustomContent>
               <div *ngIf="option.batches != null;else nullBatches">
                 {{option.name}}
               </div>
               <ng-template #nullBatches>
-                <div style="color: orange;">{{ option.name +' - Sản phẩm này đã hết hàng trong kho'}}</div>
+                <div style="color: orange;">{{ option.name +' - Sản phẩm này chưa nhập hàng trước đây'}}</div>
               </ng-template>
             </nz-option>
           </nz-select>
