--- a/src/app/home/retail/retail-product-in-bill/retail-product-in-bill.component.html
+++ b/src/app/home/retail/retail-product-in-bill/retail-product-in-bill.component.html
@@ -25,21 +25,22 @@
         </tr>
         <tr>
           <td colspan="6"></td>
-          <td colspan="2" role="button" (click)="showAddBatchModal()"><i class="fa fa-plus"></i> thêm Lô</td>
-
+          <td colspan="2" role="button" (click)="showAddBatchModal()" *ngIf="productInbill.product.isManagedInBatches">
+            <i class="fa fa-plus"></i> thêm Lô
+          </td>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
 
-<nz-modal [(nzVisible)]="isVisibleAddBatch" nzTitle="Chọn lô cho thuốc {{productInbill.product.name}}"
-  (nzOnCancel)="handleCancelAddbatch()" (nzOnOk)="handleOkAddBatch()" nzOkText="Chọn lô">
+<nz-modal [(nzVisible)]="isVisibleAddBatch" nzTitle="Chọn lô cho sản phẩm {{productInbill.product.name}}"
+  (nzOnOk)="handleOkAddBatch()" nzOkText="Chọn lô" [nzFooter]="modalFooter">
   <ng-container *nzModalContent>
     <div>
-      <div class="form-group">
+      <div class="form-group" *ngIf="productInbill.product.isManagedInBatches">
         <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired>Lô</nz-form-label>
-        <nz-select nzShowSearch nzPlaceHolder="Select a person" [(ngModel)]="goodsIssueNote.batchId"
+        <nz-select nzShowSearch nzPlaceHolder="Chọn lô" [(ngModel)]="goodsIssueNote.batchId"
           (ngModelChange)="selectBatchIDChanged()">
           <nz-option *ngFor="let item of ListBatchesOfProductInBill"
             nzLabel="{{item.id}} HSD: {{item.expiryDate|date:'dd/MM/yyyy'}}" [nzValue]="item.id"></nz-option>
@@ -47,7 +48,7 @@
       </div>
       <div class="form-group">
         <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired>Đơn vị</nz-form-label>
-        <nz-select nzShowSearch nzPlaceHolder="Select a person" [(ngModel)]="goodsIssueNote.unit"
+        <nz-select nzShowSearch nzPlaceHolder="Chọn đơn vị thuốc" [(ngModel)]="goodsIssueNote.unit"
           (ngModelChange)="changeUnit()">
           <nz-option *ngFor="let item of ListUnitOfBatches" nzLabel="Tồn kho: {{item.currentQuantity}} {{item.unit}}"
             [nzValue]="item.id"></nz-option>
@@ -60,4 +61,8 @@
       </div>
     </div>
   </ng-container>
+
+  <ng-template #modalFooter>
+    <button nz-button nzType="primary" (click)="handleOkAddBatch()">Xác nhận</button>
+  </ng-template>
 </nz-modal>
