--- a/src/app/home/retail/retail-customer-in-bill/retail-customer-history-invoice/retail-customer-history-invoice-detail/retail-customer-history-invoice-detail.component.html
+++ b/src/app/home/retail/retail-customer-in-bill/retail-customer-history-invoice/retail-customer-history-invoice-detail/retail-customer-history-invoice-detail.component.html
@@ -10,6 +10,11 @@
         </td>
       </tr>
       <tr>
+        <td><h6>Mã hóa đơn: {{Infor.barcode}}</h6></td>
+      </tr>
+      <tr>
+      </tr>
+      <tr>
         <td></td>
         <td>
           <div *ngIf="statusReturnProduct == 2" class="text-end">
