--- a/src/app/home/input/input-element/input-element.component.html
+++ b/src/app/home/input/input-element/input-element.component.html
@@ -1,7 +1,7 @@
 <div id="input__product" class="pt-3 pb-3">
   <table class="w-100">
     <tr>
-      <td style="width: 7%">
+      <td style="width: 7%" class="text-center">
         <h5>{{index + 1}}</h5>
       </td>
       <td style="width: 20%">
@@ -93,7 +93,7 @@
           </ng-template>
         </nz-modal>
       </td>
-      <td style="width: 2%" class="mt-0 pt-0">
+      <td style="width: 4%" class="mt-0 pt-0">
         <i class="fa fa-trash-alt" role="button" (click)="deleteProduct()"></i>
       </td>
     </tr>
