--- a/src/app/home/return-product/return-product-template/return-product-template.component.html
+++ b/src/app/home/return-product/return-product-template/return-product-template.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="col-3">
       <div class="panel__container p-3 position-relative">
-        <label style="color:red">* Nhập barcode đơn hàng để lấy thông tin</label>
+        <label><span style="color:red">*</span><span>Nhập barcode đơn hàng để lấy thông tin</span></label>
         <input nz-input placeholder="Mã barcode đơn hàng" nzSize="default" [(ngModel)]="invoiceBarcode"
           (ngModelChange)="searchInvocie()" />
         <div class="text-end mt-4">
