--- a/src/app/home/retail/retail-invoice/retail-invoice.component.html
+++ b/src/app/home/retail/retail-invoice/retail-invoice.component.html
@@ -48,6 +48,10 @@
         <h6>Còn lại: {{totalBillPrice - usePointPrice | currency:'VND'}}</h6>
       </div>
     </div>
+    <nz-divider></nz-divider>
+    <div>
+      <b>Lưu ý: </b><i>Hóa đơn chỉ được đổi trả trong vòng 7 ngày kể từ ngày bán</i>
+    </div>
   </div>
 
 </div>
